# zswajozsya-tauri

./: package.json  pnpm-lock.yaml
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: dir_entry.rs  file_type.rs  main.rs
src/components/: ColorPicker.vue  DirectoryLabelEditor.vue  FileLabelEditor.vue  Header.vue  Labels.vue  Main.vue  Preview.vue  Sidebar.vue  Toolbar.vue
src/libs/: miscs.ts  result.ts
src/stores/: dialog.ts  index.ts  path.ts
src/tauri/: index.ts
src/types/: index.ts
src/utils/: index.ts
